Fix project image width

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -14,7 +14,7 @@ import config from '../config';
           <Image
             src={project.thumbnail}
             alt={project.title}
-            class="object-cover h-42"
+            class="w-full object-cover h-42"
             width={352}
             height={168}
             loading="eager"
